--- a/Google/Maps/index.html
+++ b/Google/Maps/index.html
@@ -2,14 +2,76 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="./css/estilos.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">	
+	<!-- <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script> -->
+	<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-database.js"></script>
+
+	
+	<script type="text/javascript" src="./js/config.js"></script>
+
 	<title></title>
 
 </head>
-<body>
-	<div id="map"></div>
+<body class="bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	  <a class="navbar-brand" href="#">Navbar</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <ul class="navbar-nav mr-auto">
+	      <li class="nav-item active">
+	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Link</a>
+	      </li>
+	      <li class="nav-item dropdown">
+	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	          Dropdown
+	        </a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	          <a class="dropdown-item" href="#">Action</a>
+	          <a class="dropdown-item" href="#">Another action</a>
+	          <div class="dropdown-divider"></div>
+	          <a class="dropdown-item" href="#">Something else here</a>
+	        </div>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link disabled" href="#">Disabled</a>
+	      </li>
+	    </ul>
+	    <form class="form-inline my-2 my-lg-0">
+	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+	      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+	    </form>
+	  </div>
+	</nav>
+
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-3 bg-light p-5">
+				<button class="btn-outline-success btn-block" id="btnPosicion">Mi Posicion</button>
+				<button class="btn-outline-danger btn-block" id="btnBorrarPosicion">Borrar mi Posicion</button>
+				<button class="btn-outline-primary btn-block" id="btnGetCanchas">Traer canchas</button>
+				
+			</div>
+			<div class="col-md-9">		
+				<div id="map"></div>
+			</div>
+
+
+		</div>
+	</div>
+
+	
     <script type="text/javascript" src="./js/mapas.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh7rSz7BbqbYOdUcy7t0GTNgCaUxVvNmU&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh7rSz7BbqbYOdUcy7t0GTNgCaUxVvNmU"
     async defer></script>
+
+
 
 </body>
 </html>
