--- a/Google/Maps/index.html
+++ b/Google/Maps/index.html
@@ -6,14 +6,55 @@
 	<!-- <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script> -->
 	<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-database.js"></script>
-
-	
+	<script type="text/javascript" src="./models/Cancha.js"></script>
 	<script type="text/javascript" src="./js/config.js"></script>
+	
 
 	<title></title>
 
 </head>
 <body class="bg-dark">
+<!-- modales -->
+<div class="modal fade" id="crearModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Crear Canchita</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div id="mapaLatLng"></div>
+					<hr>
+					<form>
+
+							<div class="form-group">
+								<label for="inputNombre">Nombre</label>
+								<input type="text" class="form-control" id="inputNombre"  placeholder="Ingrese el nombre">
+								<small  class="form-text text-muted">Nombre de la canchita</small>
+							</div>
+							<div class="form-group">
+									<label for="inputDireccion">Dirección</label>
+									<input type="text" class="form-control" id="inputDireccion"  placeholder="Ingrese la dirección">
+									<small  class="form-text text-muted">Direccion de la canchita</small>
+							</div>
+						<div class="form-group">
+									<label for="inputTelefono">Teléfono</label>
+									<input type="text" class="form-control" id="inputTelefono"  placeholder="Ingrese el numero de telefono">
+									<small  class="form-text text-muted">Direccion de la canchita</small>
+							</div>
+						</form>
+
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+					<button type="button" class="btn btn-primary" id="btnCrearCanchas">Crear</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	  <a class="navbar-brand" href="#">Navbar</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,16 +93,17 @@
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-3 bg-light p-5">
-				<button class="btn-outline-success btn-block" id="btnPosicion">Mi Posicion</button>
-				<button class="btn-outline-danger btn-block" id="btnBorrarPosicion">Borrar mi Posicion</button>
-				<button class="btn-outline-primary btn-block" id="btnGetCanchas">Traer canchas</button>
-				
-			</div>
-			<div class="col-md-9">		
+				<div class="col-md-3 bg-light p-5">
+					<button class="btn-outline-success btn-block" id="btnPosicion">Mi Posicion</button>
+					<button class="btn-outline-danger btn-block" id="btnBorrarPosicion">Borrar mi Posicion</button>
+					<button class="btn-outline-primary btn-block" id="btnGetCanchas">Traer canchas</button>
+					<button class="btn btn-dark btn-block" data-toggle="modal" type="button" data-target="#crearModal">Traer canchas</button>
+				</div>
+				<div class="col-md-9">		
 				<div id="map"></div>
-			</div>
-
+				</div>
+		</div>
+		<div class="row bg-light mt-5 p-5" id="canchas">
 
 		</div>
 	</div>
@@ -69,7 +111,10 @@
 	
     <script type="text/javascript" src="./js/mapas.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh7rSz7BbqbYOdUcy7t0GTNgCaUxVvNmU"
-    async defer></script>
+		async defer></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
 
 
