--- a/Google/Maps/index.html
+++ b/Google/Maps/index.html
@@ -4,9 +4,9 @@
 	<link rel="stylesheet" type="text/css" href="./css/estilos.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">	
 	<!-- <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script> -->
-	<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-database.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-storage.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-storage.js"></script>
 	<script type="text/javascript" src="./models/Cancha.js"></script>
 	<script type="text/javascript" src="./js/config.js"></script>
 	
@@ -116,7 +116,7 @@
 					data-target="#crearModal">Crear cancha</button>
 					<hr>
 					<input class="form-control mb-2" type="file" id="foto">
-					<button class="btn-outline-primary btn-block" id="btnSubirArchivo">Subir</button>
+					<button class="btn btn-warning btn-block" id="btnSubirArchivo">Subir</button>
 
 				</div>
 				<div class="col-md-9">		
@@ -129,11 +129,10 @@
 	</div>
 	
     <script type="text/javascript" src="./js/mapas.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh7rSz7BbqbYOdUcy7t0GTNgCaUxVvNmU&libraries=places"
-		async defer></script>
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh7rSz7BbqbYOdUcy7t0GTNgCaUxVvNmU&libraries=places" async defer></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
 </body>
 </html>
