--- a/Google/Maps/index.html
+++ b/Google/Maps/index.html
@@ -59,6 +59,11 @@
 									<input type="text" class="form-control" id="inputTelefono"  placeholder="Ingrese el numero de telefono">
 									<small  class="form-text text-muted">Direccion de la canchita</small>
 							</div>
+							<div class="formgroup">
+								<hr>
+									<input class="form-control mb-2" type="file" id="photo">
+									<button class="btn btn-warning btn-block" id="btnSubirArchivo">Subir</button>
+							</div>
 						</form>
 
 				</div>
@@ -115,7 +120,7 @@
 					<button class="btn btn-dark btn-block" data-toggle="modal" type="button" 
 					data-target="#crearModal">Crear cancha</button>
 					<hr>
-					<input class="form-control mb-2" type="file" id="foto">
+					<input class="form-control mb-2" type="file" id="photo">
 					<button class="btn btn-warning btn-block" id="btnSubirArchivo">Subir</button>
 
 				</div>
